--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1729,107 +1729,107 @@ stories:
   domain: http://www.memphisflyer.com/
   link: https://www.memphisflyer.com/HungryMemphis/archives/2019/12/29/sushi-jimmi-joins-saltwater-crab
 images:
-- name: mediterranean-mediterranean-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-light-dali.jpg
-- name: curtain-curtain-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smoking-cigarette.jpg
-- name: christianity-christianity-under-construction-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smoking-cigarette.jpg
-- name: school-clouds-church-clouds-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-rain.jpg
-- name: lincoln-memorial-lincolnmemorial-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-hot-spicy.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-- name: old-school-house-old-schoolhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-electricity.jpg
-- name: bf-skinner-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-small-town-station.jpg
-- name: status-berlin-status-berlin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit.jpg
-- name: old-door-lock-old-door-lock-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-light-dali.jpg
-- name: border-crossing-bordercrossing-dark-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-dali.png
-- name: ellis-island-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-circuit.jpg
-- name: aws-s3-stories-server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-dark-dali.jpg
-- name: containership-containership-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sand-paper.jpg
-- name: containership-containership-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alien-goggles.jpg
-- name: aws-s3-smithriver-smithriver-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
-- name: dc-statue-dcstatue-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-dali.jpg
-- name: udnie-IMG_7054.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7054.jpg
-- name: lincoln-memorial-lincolnmemorial-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-monet-one.jpg
-- name: gears-4882162452-fa3126b38d-b-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smooth-ride.jpg
-- name: nazi-invasion-vancouver-waterfront_36556357642_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-vancouver-waterfront_36556357642_o.jpg
-- name: abandonedbuildings_nazi_poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_nazi_poster.jpg
-- name: trucksilo-trucksilo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-aqua.jpg
-- name: la-muse-eagle-spread-tree-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eagle-spread-tree-2.jpg
-- name: abandonedbuildings_monet_one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_monet_one.jpg
-- name: fence-fence-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-constitution.jpg
-- name: downtheline-downtheline-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colored-circuits.jpg
-- name: dragon-desert-desert-dragon-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colorful-dream.jpg
-- name: mediterranean-mediterranean-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
-- name: aws-s3-square-file-00-00-00-00-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-square.jpg
-- name: aws-s3-stories-power-lines-empty-space-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-sunday.jpg
-- name: subway-subway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
-- name: flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
-- name: oldsmallboat-oldsmallboat-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-sand-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
-- name: copper-circuit-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-boats-waterfront-bristol.jpg
-- name: old-house-oldhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-cinnamon-rolls.jpg
-- name: catacombs-catacombs-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-free-woman.jpg
-- name: ellis-island-ellisisland-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-mucha-mult.jpg
-- name: mistywoods-babyfoot-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-asteroids.jpg
-- name: gypsymosaic-gypsy-eyes-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-emily-carr.jpg
-- name: stories-old-door-lock-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-door-lock-copper-circuit.jpg
-- name: capital-battle-capitolbattle-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-bright-sand.jpg
-- name: containership-containership-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-horiz-circuit.jpg
-- name: dragon_close-up-wreck.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wreck.jpg
-- name: crow_nazi_poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_nazi_poster.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-creativity.jpg
-- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-- name: nazi-invasion-city-vancouver-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-vancouver-clouds.jpg
-- name: oldtrain-oldtrain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-smooth-ride.jpg
-- name: supreme-court-supremecourt-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-electricity.jpg
+- name: braceros-domingo-ulloa-nyc-subway-train-125th.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-nyc-subway-train-125th.jpg
+- name: udnie-IMG_7995.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7995.jpg
+- name: old-house-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-two.jpg
+- name: stalin-time-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-fire-truck-pulling-out-of-station.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dali-two.jpg
+- name: mistywoods-babyfoot-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-really-hot.jpg
+- name: old-school-house-old-schoolhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-gan-vogh.jpg
+- name: windowmountain-window-mountain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-storm.jpg
+- name: yosemite-yosemite-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-bright-sand.jpg
+- name: scream-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8486.jpg
+- name: copper-circuit-cannon_36556797762_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cannon_36556797762_o.jpg
+- name: yosemite-yosemite-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-space-pizza.jpg
+- name: apartment-window-apartment-window-leaves-underpainting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/apartment-window-apartment-window-leaves-underpainting.jpg
+- name: bf-skinner-creepy-doll-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-creepy-doll-looking-down.jpg
+- name: blossombar-gred-mash-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-00-00.jpg
+- name: white-house-whitehouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dry-skin.jpg
+- name: berlinwall2-berlinwall-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gan-vogh.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+- name: downtown-trucksilo-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-wols.jpg
+- name: walled-garden-walled-garden-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-gan-vogh.jpg
+- name: mosaic-face-mosaic-face-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-post-modern.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+- name: legal-statue-legalstatue-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colored-circuits.jpg
+- name: subway-subway-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-marcel-duchamp.jpg
+- name: sand-hand-sand-hand-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alien-goggles.jpg
+- name: oldhouse-oldhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alien-goggles.jpg
+- name: oldsmallboat-oldsmallboat-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-clean-view.jpg
+- name: nazi-invasion-IMG_6441.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6441.jpg
+- name: copper-circuit-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crypto-wheels-old-compute-bletchley.jpg
+- name: oldsmallboat-oldsmallboat-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-smooth-ride.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-atari-asteroids.png
+- name: adam-smith-adam-smith-feed-people.pxm
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-feed-people.pxm
+- name: rain-princess-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-construction-crane-city.jpg
+- name: stalin-time-old-computer-bletchley-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-computer-bletchley-crypto.jpg
+- name: bf-skinner-wild-gease-in-the-water.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-wild-gease-in-the-water.jpg
+- name: abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+- name: white-house-lawn-white-house-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
+- name: berlinwall-DSC-0084-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dry-skin.jpg
+- name: old-church-oldchurch-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alien-goggles.jpg
+- name: trucksilo-trucksilo-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-neo-instinct.jpg
+- name: file-00-00-21-82.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-21-82.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+- name: gypsymosaic-gypsy-eyes-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-internet-numbers.jpg
+- name: berlinwall2-berlinwall-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-three.jpg
+- name: razorcliff-razorcliff-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-rain.jpg
+- name: crow_mucha_mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
+- name: docks-docks-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-really-hot.jpg
+- name: death-valley-death-valley-national-park-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-deep-connections.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
+- name: supreme-court-supremecourt-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
 ---
 YouTube Series Highlights Pittsburgh's Neighborhoods, Big And Small.&nbsp;Former Norman Police Chief Don Holyfield Dies.&nbsp;Auburn, Angola Appear On New Tourism List.&nbsp;Illinois Sees First Legal Sales Of Recreational Marijuana.&nbsp;Mexico City Plastic Bag Ban To Take Residents Back In Time.&nbsp;Have A Resolution For The New Year? Here Are The Most Popular Ones.&nbsp;Parks Restrict Climbing Routes To Protect Wildlife.&nbsp;Funeral Set For Slain Panola County Deputy.&nbsp;
